* memory usage optimization in FastScanCCD

v1.1.2, 2015-04-22

* new webpage theme to allow for easier reading (esp. mobile devices)
* huge set of improvements for working with FastScans (ESRF ID01)
* keep_open option in EDFFile to speed up reading of multiple images
* new convenience function for parsing data from spec-files
* improve peak position finding in area-detector calibration
* added new material AlAs

v1.1.1, 2015-01-22

* new PseudoVoigt1dasym function implementing an asymmetric PseudoVoigt peak
* FuzzyGridder1D: improved 1D gridder using a range of value for each data
  point
* fix memory leak in XRDMLFile by abandoning minidom
* edf-parser improvements: support for multiple images per file
* spec-parser improvements, keep file closed when not parsing it
* peak_fit: linear background feature
* peak_fit function: enhancement of automatic initial parameter determination
* improvements in the Material.environment function (occupancy awareness)
* reciprocal space conversion for goniometers with translation-axis in the
  detector arms (point, linear, area detectors)
* reciprocal space conversion of energy scans for point, linear, area
  detectors
* addition of serval test routines to improve the code quality

v1.1.0, 2014-10-09

* fix bug in Q2Ang with refrac = True (omega angle could have been reported
  incorrect and added some geometry checks/warnings)
* more flexibility in sample position/orientation definition
* documentation updates
* small bug fixes in matplotlib import code
* c-header-code cleanup
* reformat c-code to conform to PEP7
* reformat python code to conform to PEP8

v1.1.0-beta, 2014-09-16

* new 1D Gridder working consistent with 2D and 3D
* add easy Powder Diffraction cif file parser
* addition of several test routines to improve the code quality
* new mathematical functions in math subpackage
* fixes for possible segfault in the Gridder classes
* considerable reduce size of elements.db file